--- a/link/nicepage.css
+++ b/link/nicepage.css
@@ -4049,6 +4049,11 @@ h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
+h2 {
+  font-size: 1em;
+  margin: 0.67em 0;
+}
+
 mark {
   background-color: #ff0;
   color: #000;
